testsuite/tests/properties/invalid_lambda_arg_type/filtermap_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.filtermap(
            (e: Example, i: Bool) => if i then node.items.at(1) else e,
            (e: Example, i: Int) => not e.is_null or i == 0
        )
}
